tests/codegen/fail/interface/struct/attr_implementers_duplicate_pretty.stderr
error: duplicated attribute argument found
 --> fail/interface/struct/attr_implementers_duplicate_pretty.rs:9:34
  |
9 | #[graphql_interface(for = [ObjA, ObjA])]
  |                                  ^^^^
